@@ -85,9 +85,9 @@ def header (f):
 '/FontMatrix [.001 0 0 .001 0 0] def\n'
 '%%/FontMatrix [.01 0 0 .01 0 0] def\n'
 '%%/FontMatrix [0.1 0 0 0.1 0 0] def\n'
-'%% /FontBBox [-1000 -1000 1000 1000] def\n'
-' /FontBBox [-3000 -3000 3000 3000] def\n'
-'%% /FontBBox [-300 -300 300 300] def\n'
+'%%/FontBBox [-1000 -1000 1000 1000] def\n'
+'/FontBBox [-3000 -3000 3000 3000] def\n'
+'%%/FontBBox [-300 -300 300 300] def\n'
 '%%/FontBBox [-30 -30 30 30] def\n'
 '\n'
 '/Encoding 256 array def                     %% Trivial encoding vector\n'
@@ -97,9 +97,11 @@ def footer (f):
 	f.write ('\n'
 '/BuildGlyph {                               % Stack contains: font charname\n'
 '%  1000 0                                   % Width\n'
+'%  -1000 -1000 1000 1000                    % Bounding Box\n'
 '%  -750 -750 750 750                        % Bounding Box\n'
-'  3000 0                                    % Width\n'
-'  -3000 -3000 3000 3000                     % Bounding Box\n'
+'%  -750 -750 750 750                        % Bounding Box\n'
+'   3000 0                                   % Width\n'
+'   -3000 -3000 3000 3000                    % Bounding Box\n'
 '%  300 0                                    % Width\n'
 '%  -300 -300 300 300                        % Bounding Box\n'
 '%  30 0                                     % Width\n'
