@@ -46,6 +46,8 @@ BASH = @BASH@
 BISON = @BISON@
 FIND = @FIND@
 FLEX = @FLEX@
+INIMETAFONT = @INIMETAFONT@
+INIMETAPOST = @INIMETAPOST@
 LN = @LN@
 LN_S = @LN_S@
 METAFONT = @METAFONT@
